hardcoded redirect for http, fixed spacing on &

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -278,6 +278,9 @@ body {
       font-size: 4rem;
       padding-top: 3rem;
       padding-bottom: 5rem; }
+      @media (max-width: 992px) {
+        .portfolio__project--and {
+          padding-top: 2rem; } }
     .portfolio__project--padding {
       padding-top: 1.8rem; }
     .portfolio__project--title {
