--- a/src/scss/_portfolio.scss
+++ b/src/scss/_portfolio.scss
@@ -45,6 +45,10 @@
       font-size: 4rem;
       padding-top: 3rem;
       padding-bottom: 5rem;
+
+      @include lg {
+        padding-top: 2rem;
+      }
     }
 
     &--padding {
